tests/ui/parser/issues/issue-20616-6.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `,`
  --> $DIR/issue-20616-6.rs:25:26
   |
LL | type Type_6 = Type_5_<'a,,>;
   |                          ^ expected one of `>`, a const expression, lifetime, or type
   |
help: you might have meant to end the type parameters here
   |
LL | type Type_6 = Type_5_<'a>,,>;
   |                         +

error: aborting due to 1 previous error

